// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 131215,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 131389,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 266749,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 294405,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 307776,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282812,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 212542,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 212688,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 234712,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 211372,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 364256,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 211473,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 343130,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 306041,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 284753,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 181083,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 189500,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 224612,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 193921,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 224667,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 193875,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 372878,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 258141,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 357470,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 249115,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 287398,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 263117,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 288911,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 366111,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 387052,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 334264,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 382613,
}
`;
